- ajustar inserção de um novo lançamento possibilitando colocar um bank qnd for receita - criar testes do fluxo de caixa na camada de aplicação