@@ -14,7 +14,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-import java.util.Arrays;
+import java.util.Date;
+import java.util.List;
+import java.util.Optional;
 
 import static org.mockito.Mockito.*;
 
@@ -38,7 +40,7 @@ class ReleaseQueryTest {
         String userId = "id-valid";
         Release releaseMock = ReleaseMock.get();
 
-        when(repository.findAllByUserId(anyString(),any(Pageable.class))).thenReturn(Arrays.asList(releaseMock));
+        when(repository.findAllByUserId(anyString(),any(Pageable.class))).thenReturn(List.of(releaseMock));
 
         Page<Release> result = query.getReleases(userId, pageMock);
 
@@ -47,6 +49,57 @@ class ReleaseQueryTest {
         BDDAssertions.assertThat(result.getContent().get(0)).isEqualTo(releaseMock);
 
         verify(repository, times(1)).findAllByUserId(anyString(), any(Pageable.class));
+    }
+
+
+    @Test
+    @DisplayName("Should return a optional release when userId is provider")
+    void findReleaseById(){
+
+        Release releaseMock = ReleaseMock.get();
+        String userId = releaseMock.getUser().getId();
+
+        when(repository.findByIdAndByUserId(releaseMock.getId(),userId)).thenReturn(Optional.of(releaseMock));
+
+        Optional<Release> result = query.findReleaseById(releaseMock.getId(), userId);
+
+        BDDAssertions.assertThat(result).isNotNull().isPresent().isEqualTo(Optional.of(releaseMock));
+
+        verify(repository, times(1)).findByIdAndByUserId(releaseMock.getId(), userId);
+    }
+
+
+    @Test
+    @DisplayName("Should return a optional release when userId is provider")
+    void findReleasesCloseExpiration(){
+
+        Release releaseMock = ReleaseMock.get();
+        String userId = releaseMock.getUser().getId();
+
+        when(repository.findReleasesCloseExpirationIn5Days(eq(userId), any(Date.class))).thenReturn(List.of(releaseMock));
+
+        List<Release> result = query.findReleasesCloseExpiration(userId);
+
+        BDDAssertions.assertThat(result).isNotNull().isEqualTo(List.of(releaseMock));
+
+        verify(repository, times(1)).findReleasesCloseExpirationIn5Days(eq(userId), any(Date.class));
+    }
+
+    @Test
+    @DisplayName("Should return total release balance by user id")
+    void getBalanceTotal(){
+
+        Release releaseMock = ReleaseMock.get();
+        String userId = releaseMock.getUser().getId();
+        Double total = 1000d;
+
+        when(repository.getBalanceTotal(userId)).thenReturn(total);
+
+        Double result = query.getBalanceTotal(userId);
+
+        BDDAssertions.assertThat(result).isNotNull().isEqualTo(total);
+
+        verify(repository, times(1)).getBalanceTotal(userId);
     }
 
 
